--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "async": "^1.3.0",
     "bucker": "^1.1.1",
     "deasync": "^0.1.0",
+    "ejs": "^2.3.3",
     "fibers": "^1.0.6",
     "hapi": "^8.8.0",
     "joi": "^6.5.0",
